# hh.ru

./: .gitignore  README.md  main.py  pyproject.toml
data/: h4.json  vacancies.json
src/: creat_bd.py  parser.py  utils.py  vacancies.py
