[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Konstantin Maurin <artsjesus7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
